--- a/src/main/java/javadoc-overview.html
+++ b/src/main/java/javadoc-overview.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Overview (org.ideaccum.libs.commons)</title>
+<title>Overview (org.ideaccum.libs.commons.message)</title>
 </head>
 <body>
-	このドキュメントはorg.ideaccume.libs.commonsライブラリAPI仕様です。
-	<p>org.ideaccume.libs.commonsライブラリはJava実装における利用頻度の高い操作を簡潔に実装するための各種ユーティリティを提供するライブラリパッケージです。</p>
+	このドキュメントはorg.ideaccume.libs.commons.messageライブラリAPI仕様です。
+	<p>Commons Messageは、外部定義されたメッセージ定義情報を利用する際の操作を標準化するためのクラスが提供されるパッケージです。</p>
 </body>
 </html>
