--- a/src/main/java/javadoc-overview.html
+++ b/src/main/java/javadoc-overview.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Overview (org.ideaccum.libs.commons.message)</title>
+<title>Overview (Commons Message)</title>
 </head>
 <body>
-	このドキュメントはorg.ideaccume.libs.commons.messageライブラリAPI仕様です。
+	このドキュメントはCommons MessageライブラリAPI仕様です。
 	<p>Commons Messageは、外部定義されたメッセージ定義情報を利用する際の操作を標準化するためのクラスが提供されるパッケージです。</p>
 </body>
 </html>
